# opendata

./: Cargo.toml  MANIFESTO_SIGNERS.md  README.md
common/src/serde/: encoding.rs
common/src/storage/: in_memory.rs  mod.rs  slate.rs
log/rfcs/: 0002-logical-segmentation.md
log/src/: log.rs  reader.rs
open-tsdb/src/: head.rs  model.rs
open-tsdb/src/promql/: evaluator.rs  functions.rs  mod.rs
open-tsdb/src/storage/: merge_operator.rs
rfcs/: 0003-benchmark-framework.md
timeseries/: README.md
timeseries/rfcs/: 0001-tsdb-storage.md
timeseries/src/: query.rs  tsdb.rs
timeseries/src/promql/: evaluator.rs  otlp.rs  selector.rs
timeseries/src/serde/: key.rs
vector/: Cargo.toml
vector/src/: db.rs  delta.rs  lib.rs  model.rs
vector/src/storage/: merge_operator.rs  mod.rs
